# ginsta

./: Cargo.toml  build.rs  insgps_format.md
src/: main.rs
src/proto/: extra_metadata.proto
src/testdata/: Gps_1752824363158.insgps
