[package]
name = "ginsta"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
nom = "8.0.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }

[[bin]]
name = "insgps"

[[bin]]
name = "hexnumber"
